<resources>
    <string name="app_name">L&amp;R Class</string>

    //splash
    <string name="splash_logo">Logo Loading Screen</string>

    //role
    <string name="header_role">Silahkan Login/Sign Up Sebagai :</string>
    <string name="guru">Guru</string>
    <string name="contentdesc_guru_role">Button untuk login atau signup sebagai guru</string>
    <string name="murid">Peserta Didik</string>
    <string name="contentdesc_murid_role">Button untuk login atau signup sebagai murid</string>

    //Login and Regis
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="hint_username">Masukkan Username Anda</string>
    <string name="hint_password">Masukkan Password Anda</string>
    <string name="lupa_pass">Lupa Password ?</string>
    <string name="btn_login">Masuk</string>
    <string name="tv_regis">Belum Punya Akun ?</string>
    <string name="btn_login_register">Daftar Disini</string>
    <string name="regis">Register</string>
    <string name="hint_name">Masukkan Nama Anda</string>
    <string name="hint_email">Masukkan Email Anda</string>
    <string name="btn_regis">Daftar</string>
    <string name="tv_register">Sudah Punya Akun ?</string>
    <string name="btn_register">Masuk Disini</string>
    <string name="snack_regis">Register Berhasil, Silahkan Login</string>
    <string name="snack_regis_gagal">Register Gagal !!!\nSilahkan Isi Data Register Terlebih Dahulu !</string>
    <string name="snack_login">Login Berhasil!!!</string>
    <string name="snack_login_gagal">Login Gagal !!!\nSilahkan cek username/password Anda !</string>
    <string name="tombol_kembali">Tombol Kembali</string>
    <string name="atau_masuk">Atau masuk dengan</string>

    //HomePage
    <string name="welcome">Selamat Datang !</string>
    <string name="btn_panduan">Panduan</string>
    <string name="btn_kelas">Kelas</string>
    <string name="btn_eksplor">Eksplorasi</string>
    <string name="btn_exit">Keluar</string>
    <string name="log_desc">Apakah Anda ingin keluar dari aplikasi ?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>

    //bottom navbar
    <string name="nav_home">Home</string>
    <string name="nav_fav">Favorite</string>
    <string name="nav_notif">Notification</string>
    <string name="nav_profile">Profile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    //Favorite
    <string name="head_fav">Favorit</string>

    //Notif
    <string name="head_notif">Pemberitahuan</string>

    //Profile
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="head_profile">Informasi Profil</string>
    <string name="ex_user">Jibon Yuanditra</string>
    <string name="ex_email">jibonyuand57@gmail.com</string>
    <string name="email">Email</string>
    <string name="phone">Nomor Telepon</string>
    <string name="ex_phone">0812345678</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>

    //Panduan
    //Guru
    <string name="head_panduan">Panduan</string>
    <string name="btn_guru">Guru</string>
    <string name="btn_siswa">Siswa</string>
    <string name="buat">Panduan Membuat Kelas</string>
    <string name="isi_panduan_kelas">1. Dibagian bawah halaman klik + untuk membuat kelas.\n2. Masukkan nama kelas.\n3. Untuk menambahkan Ruang dan Mata Pelajaran. (Opsional)\n4. Klik Buat.</string>
    <string name="materi"> Panduan Membuat Materi</string>
    <string name="materi1">1. Klik kelas Materi.\n2. Dibagian bawah halaman klik + untuk menambahkan materi.\n3. Masukkan judul, deskripsi dan topik.\n4. Untuk memasukkan deskripsi singkat.  (Opsional) </string>
    <string name="quiz">Panduan Membuat Quiz</string>
    <string name="quiz1">1. Klik bagian Quiz.\n2. Dibagian bawah halaman klik + untuk menambahkan quiz.\n3. Masukkan nama quiz dan tambahkan pertanyaan.\n4. Pilih jenis soal.\n5. Masukkan soal dan jawaban.\n6. Posting.\n</string>

    //Siswa
    <string name="masuk">Panduan Masuk Kelas</string>
    <string name="masuk1">1. Klik kelas pada menu Home.\n2. Dibagian bawah halaman klik + untuk menambahkan kelas.\n3. Masukkan kode kelas.\n4. Gabung.</string>
    <string name="aksesmateri">Panduan Mengakses Materi Kelas</string>
    <string name="aksesmateri1">1. Klik kelas lalu pilih materi.\n2. Pilih materi yang akan dipelajari.</string>
    <string name="aksesquiz">Panduan Mengakses Quiz</string>
    <string name="aksesquiz1">1. Klik kelas lalu pilih quiz.\n2. Pilih quiz yang ingin dikerjakan.\n3. Pada soal multiple choice, kerjakan soal dengan klik salah satu jawaban benar.\n4. Pada soal isian, tulis jawaban yang tersedia pada kolom</string>
    <string name="eksplor">Panduan Mengeksplor Materi</string>
    <string name="eksplor1">1. Eksplorasi pada menu Home.\n2. Pilih materi yang akan dipelajari.</string>

    //Kelas
    <string name="head_kelas">Kelas</string>
    <string name="blank_kelas">Tidak melihat kelas yang sudah ada?\nBergabung dengan kelas pertama Anda !</string>
    <string name="join_kelas">Gabung Kelas</string>
    <string name="tv_kode_kelas">Mintalah kode kelas kepada pengajar, lalu masukkan kode di sini.</string>
    <string name="hint_kode">Kode kelas</string>
    <string name="join">Gabung</string>
    <string name="btn_materi">Materi</string>
    <string name="btn_quiz">Quiz</string>

    //Quiz
    <string name="head_quiz">Quiz</string>
    <string name="quiz_mtk">Quiz Matematika</string>
    <string name="no.1">Soal 1/1</string>
    <string name="soal1">Berapa jumlah sudut pada bangun datar persegi?</string>
    <string name="load_fail">Gagal Memuat Suara</string>
    <string name="A">Empat</string>
    <string name="B">Tiga</string>
    <string name="C">Dua</string>
    <string name="D">Satu</string>
    <string name="next">Selanjutnya</string>
    <string name="selesai">Selesai</string>
    <string name="nilai">Lihat Nilai</string>

    <string name="head_nilai">Nilai Quiz</string>
    <string name="rank">Peringkat</string>
    <string name="skor">Skor</string>

    <string name="satu">1. </string>
    <string name="Dua">2. </string>
    <string name="nama1">Brian Immanuel</string>
    <string name="skor1">90</string>
    <string name="skor2">55</string>

    //Explore
    <string name="bindo">Bahasa Indonesia</string>
    <string name="Biologi">Biologi</string>
    <string name="sel">Sel Tumbuhan</string>
    <string name="pencernaan">Sistem Pencernaan</string>
    <string name="peredarandrh">Sistem Peredaran Darah</string>
    <string name="bing">Bahasa Inggris</string>
    <string name="narative">Narrative Text</string>
    <string name="report">Report Text</string>
    <string name="spoof">Spoof Text</string>
    <string name="all">Lihat Semua ></string>
    <string name="explanation">Teks Eksplanasi</string>
    <string name="pantun">Pantun</string>
    <string name="puisi">Puisi</string>

    //Dialog
    <string name="title_pop">Aksesibilitas</string>
    <string name="desc_pop">Disarankan untuk mengaktifkan fitur Talkback untuk memudahkan pengguna disabilitas dalam menggunakan aplikasi ini.</string>
    <string name="jgn_tampil">Jangan Tampilkan Lagi</string>
    <string name="kos"> </string>
    <string name="setting">Pergi ke Pengaturan</string>
    <string name="title_dialog">Apakah Anda yakin menyelesaikan Quiz ini ?</string>
    <string name="desc_dialog">Jika anda mengakhiri ujian ini hasil jawaban anda tidak dapat dirubah, mohon periksa kembali hasil jawaban Anda sebelum mengakhiri ujian ini !</string>
</resources>