<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/text_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".view.activity.PanduanActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/tombol_kembali"
        android:drawablePadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_head_panduan"
        style="@style/text_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/head_panduan"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_guru"
        android:layout_width="176dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_panduan"
        android:text="@string/btn_guru"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/btn_siswa"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_siswa"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_siswa_dis"
        android:text="@string/btn_siswa"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toEndOf="@+id/btn_guru" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="621dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_panduan"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_head_panduan">

        <TextView
            android:id="@+id/tv_kelas_guru"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/buat"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_isi_kelas"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elegantTextHeight="true"
            android:lineSpacingExtra="2sp"
            android:text="@string/isi_panduan_kelas"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_materi_guru"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/materi"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_isi_materi"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elegantTextHeight="true"
            android:lineSpacingExtra="2sp"
            android:text="@string/materi1"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_quiz_guru"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/quiz"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_quiz_materi"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elegantTextHeight="true"
            android:lineSpacingExtra="2sp"
            android:text="@string/quiz1"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_kelas_siswa"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/masuk"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_isi_kelas_siswa"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elegantTextHeight="true"
            android:lineSpacingExtra="2sp"
            android:text="@string/masuk1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_materi_siswa"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/aksesmateri"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_isi_materi_siswa"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elegantTextHeight="true"
            android:lineSpacingExtra="2sp"
            android:text="@string/aksesmateri1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_quiz_siswa"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/aksesquiz"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_quiz_materi_siswa"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elegantTextHeight="true"
            android:lineSpacingExtra="2sp"
            android:text="@string/aksesquiz1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_explor_siswa"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/eksplor"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_explor_materi_siswa"
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elegantTextHeight="true"
            android:lineSpacingExtra="2sp"
            android:text="@string/eksplor1"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>