<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_warning" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/text_content"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/title_dialog"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/text_content"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/desc_dialog"
        android:textAlignment="center"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            style="@style/text_content"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_no"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            style="@style/text_content"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/btn_shape"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>